Fix figure alignments

--- a/themes/esphome-theme/assets/css/main.css
+++ b/themes/esphome-theme/assets/css/main.css
@@ -124,7 +124,8 @@ h3 {
 }
 
 p {
-  margin-bottom: 1em;
+  margin-top: 0.5em;
+  margin-bottom: 0.5em;
 }
 
 ul, ol {
@@ -172,6 +173,11 @@ img.align-left, figure.align-left, .figure.align-left, object.align-left {
   margin-right: 1em;
 }
 
+img.align-right, figure.align-right, .figure.align-right, object.align-right {
+  clear: right;
+  float: right;
+  margin-left: 1em;
+}
 .copy-link {
   background: none;
   border: none;
@@ -1232,7 +1238,7 @@ footer {
 
 /* Figure and caption styling */
 figure {
-  margin: 2em 0;
+  margin-bottom: 1.0em;
   text-align: center;
 }
 
@@ -1400,6 +1406,7 @@ figcaption {
 
 .code-block {
   position: relative;
+  clear: both;
 }
 
 .copy-button.copied .copy-feedback {
